# scvis

./: .gitignore  README.md  scvis.cabal  stack.yaml
data/: torus1.model
gui/: Main.hs
src/: GUI.hs  Model.hs  Simplex.hs
