name:                scvis
version:             0.1.0.0
author:              josh
maintainer:          jgraydus@gmail.com
build-type:          Simple
cabal-version:       >=1.22

library
  exposed-modules:     GUI, Model, Simplex
  build-depends:       base >=4.8
                     , containers
                     , vector
                     , vector-algorithms
                     , mtl
                     , lens
                     , OpenGL
                     , GLFW-b
                     , random
                     , GLUT
  hs-source-dirs:      src
  default-language:    Haskell2010

executable gui
  main-is:             Main.hs
  build-depends:       base, scvis
  hs-source-dirs:      gui
  default-language:    Haskell2010
